[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onekommafive"
version = "0.1.22"
description = "Python API client for the 1KOMMA5° Heartbeat API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Markus Rebbert", email = "code@rebbert.de" },
]
keywords = ["1komma5", "heartbeat", "energy", "home-automation", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyJWT[cryptography]>=2.8",
    "cryptography>=41",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.8",
]

[project.scripts]
1k5 = "onekommafive.cli:main"

[tool.setuptools.packages.find]
include = ["onekommafive*"]

[project.urls]
Homepage = "https://github.com/mrebbert/1komma5-api"
Repository = "https://github.com/mrebbert/1komma5-api"
Changelog = "https://github.com/mrebbert/1komma5-api/releases"
Issues = "https://github.com/mrebbert/1komma5-api/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"onekommafive/__init__.py" = ["E501"]
"onekommafive/cli.py" = ["E501"]
